--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Chen Dongfang's personal blog - chendongfang.com</title>
 </head>
 <body>
+<li>Chen Dongfang's personal blog</li>
 <li><a href="essay/aboutMe.html"target="_blank" >About Me</a></li>
 </body>
 </html>
