--- a/essay/aboutMe.html
+++ b/essay/aboutMe.html
@@ -14,9 +14,9 @@ Chen Dongfang
 	<br/><br/>
 2018-now, Focus on data science.
 	<br/><br/><br/>
-Homepage:chendongfang.com
+Homepage:chendongfang.cn
     <br/><br/>
-Email:service@chendongfang.com 
+Email:chendongfang_2006@126.com 
     <br/><br/>
 </body>
 </html>
