--- a/essay/aboutMe.html
+++ b/essay/aboutMe.html
@@ -12,7 +12,7 @@ Chen Dongfang
 	<br/><br/>
 2009-2018, Engaged in software architecture and software development.
 	<br/><br/>
-2018-now, Focus on data science.
+2019-now, cto
 	<br/><br/><br/>
 Homepage:chendongfang.cn
     <br/><br/>
