--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
 </head>
 <body>
 <li>Chen Dongfang's personal blog</li>
-<li><a href="essay/aboutMe.html"target="_blank" >About Me</a></li>
+<li><a href="essay/aboutMe.html"target="_blank" >关于本人</a></li>
+    <li><a href="essay/base_code_java.html"target="_blank" >java</a></li>
+    <li><a href="essay/base_code_golang.html"target="_blank" >golang</a></li>
+    <li><a href="essay/base_code_python.html"target="_blank" >python</a></li>
+    <li><a href="essay/base_code_javascript.html"target="_blank" >javascript</a></li>
 </body>
 </html>
