--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <title>Chen Dongfang's  blog - chendongfang.com</title>
 </head>
 <body>
+    <style>
+    li{
+    list-style: none;
+    }
+    </style>
 <li>陈东方</li>
 <li><a href="essay/aboutMe.html"target="_blank" >关于本人</a></li>
     
