--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
     list-style: none;
     }
     </style>
-<li>陈东方</li>
-<li><a href="essay/aboutMe.html"target="_blank" >关于本人</a></li>
+    <h3> 陈东方</h3>
+	<ul> 
+       <li><a href="essay/aboutMe.html"target="_blank" >关于本人</a></li>
+    </ul>                
     
     <li>编程语言</li>
     <li><a href="essay/base_code_java.html"target="_blank" >java</a></li>
