--- a/essay/aboutMe.html
+++ b/essay/aboutMe.html
@@ -4,19 +4,15 @@
     <title>About Me - chendongfang.com</title>
 </head>
 <body>
-About Me:
+陈东方:
     <br/><br/>
-Chen Dongfang
+2017毕业于华东理工大学；2009年开始从事互联网相关工作，十多年互联网IT行业工作经验。擅长领域：系统架构，大数据，IM架构。
     <br/><br/>
-2013-2017, Studying Business Management at East China University of Science and Technology, China.
-	<br/><br/>
-2009-2018, Engaged in software architecture and software development.
-	<br/><br/>
-2019-now,technical manager and cto
-	<br/><br/><br/>
-Homepage:chendongfang.cn
-    <br/><br/>
-Email:chendongfang_2006@126.com 
+联系人：陈东方 <br/>
+微信：ichendongfang <br/>
+博客：www.chendongfang.com <br/>
+电话：15019222132 <br/>
+邮件：chendongfang_2006@126.com <br/>
     <br/><br/>
 </body>
 </html>
