--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <meta http-equiv="content-type" content="text/html;charset=utf-8"/>
-    <title>Chen Dongfang's  blog - chendongfang.com</title>
+    <title>陈东方</title>
 </head>
 <body>
     <style>
