--- a/essay/aboutMe.html
+++ b/essay/aboutMe.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <meta http-equiv="content-type" content="text/html;charset=utf-8"/>
-    <title>About Me - chendongfang.com</title>
+    <title>关于本人- 陈东方</title>
 </head>
 <body>
 陈东方:
