--- a/essay/aboutMe.html
+++ b/essay/aboutMe.html
@@ -10,7 +10,7 @@
     <br/><br/>
 联系人：陈东方 <br/>
 微信：ichendongfang <br/>
-博客：www.chendongfang.com <br/>
+博客：www.chendongfang.cn <br/>
 电话：15019222132 <br/>
 邮件：chendongfang_2006@126.com <br/>
     <br/><br/>
