--- a/essay/base_code/java.html
+++ b/essay/base_code/java.html
@@ -20,6 +20,7 @@
             <li><a href="#p5" >java数据结构</a></li>
             <li><a href="#p6" >java变种语言</a></li>
             <li><a href="#p7" >小结</a></li>
+            <li><a href="#p8" >参考资料</a></li>
     </ul>  
     <br/><br/>
      <h3 id="p1"> java历史</h3>
