--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
     <meta http-equiv="content-type" content="text/html;charset=utf-8"/>
     <title>陈东方</title>
+    <link id="favicon" href="http://www.chendongfang.cn/img/favicon.jpg" rel="icon" type="image/x-icon" />
 </head>
 <body>
     <style>
