--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     </ul>  
         <h3>编程思想</h3>
   <ul>  
+    <li><a href="essay/base_code/think.html"target="_blank" >编程思想</a></li>
     <li><a href="essay/base_code_java.html"target="_blank" >分布式（待补充）</a></li>
     <li><a href="essay/base_code_golang1.html"target="_blank" >设计模式（待补充）</a></li>
     <li><a href="essay/base_code_python1.html"target="_blank" >微服务（待补充）</a></li>
