--- a/essay/think/think.html
+++ b/essay/think/think.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <meta http-equiv="content-type" content="text/html;charset=utf-8"/>
-    <title>JAVA - 陈东方</title>
+    <title>编程思想 - 陈东方</title>
 </head>
 <body>
       <style>
