--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     
      <h3>编程语言</h3>
   <ul> 
+    <li><a href="essay/base_code/langue.html"target="_blank" >编程语言</a></li>
     <li><a href="essay/base_code/java.html"target="_blank" >java</a></li>
     <li><a href="essay/base_code_golang.html"target="_blank" >golang（待补充）</a></li>
     <li><a href="essay/base_code_python.html"target="_blank" >python（待补充）</a></li>
