--- a/index.html
+++ b/index.html
@@ -1,4 +1,14 @@
 <html>
+<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?d3dbed49f5a68d510aa15571dc1d26ca";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
+
 <head>
     <meta http-equiv="content-type" content="text/html;charset=utf-8"/>
     <title>陈东方</title>
