--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ var _hmt = _hmt || [];
         <h3>J2EE</h3>
   <ul> 
     <li><a href="essay/j2ee/spring.htm"target="_blank" >spring</a></li>
-    <li><a href="essay/base_code_golang1.html"target="_blank" >struct（待补充）</a></li>
+    <li><a href="essay/j2ee/struts.htm"target="_blank" >struts</a></li>
     <li><a href="essay/j2ee/mybatis.htm"target="_blank" >mybatis</a></li>
     <li><a href="essay/base_code_javascript1.html"target="_blank" >spring cloud（待补充）</a></li>
     <li><a href="essay/base_code_javascript1.html"target="_blank" >dubbo（待补充）</a></li>
