--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@ var _hmt = _hmt || [];
     <li><a href="essay/think/think.html"target="_blank" >编程思想</a></li>
     <li><a href="essay/base_code_java.html"target="_blank" >分布式（待补充）</a></li>
     <li><a href="essay/base_code_golang1.html"target="_blank" >设计模式（待补充）</a></li>
-    <li><a href="essay/base_code_python1.html"target="_blank" >微服务（待补充）</a></li>
-    <li><a href="essay/base_code_javascript1.html"target="_blank" >架构风格（待补充）</a></li>
+    
+    <li><a href="essay/base_code_javascript1.html"target="_blank" >架构设计（待补充）</a></li>
     </ul>  
 	
       <h3>数据库</h3>
@@ -87,8 +87,28 @@ var _hmt = _hmt || [];
     <li><a href="essay/j2ee/spring.htm"target="_blank" >spring</a></li>
     <li><a href="essay/j2ee/struts.htm"target="_blank" >struts</a></li>
     <li><a href="essay/j2ee/mybatis.htm"target="_blank" >mybatis</a></li>
-    <li><a href="essay/base_code_javascript1.html"target="_blank" >spring cloud（待补充）</a></li>
+    <li><a href="essay/base_code_javascript1.html"target="_blank" >spring cloud 系列</a></li>
     <li><a href="essay/base_code_javascript1.html"target="_blank" >dubbo（待补充）</a></li>
+    </ul>  
+<h3>容器</h3>
+  <ul> 
+    <li><a href="essay/base_code_golang1.html"target="_blank" >linux（待补充）</a></li>
+    <li><a href="essay/base_code_python1.html"target="_blank" >docker（待补充）</a></li>
+    <li><a href="essay/base_code_javascript1.html"target="_blank" >k8s（待补充）</a></li>
+    </ul>  
+<h3>运维</h3>
+  <ul> 
+    <li><a href="essay/base_code_golang1.html"target="_blank" >git（待补充）</a></li>
+    <li><a href="essay/base_code_python1.html"target="_blank" >svn（待补充）</a></li>
+    <li><a href="essay/base_code_javascript1.html"target="_blank" >shell（待补充）</a></li>
+    <li><a href="essay/base_code_javascript1.html"target="_blank" >apache（待补充）</a></li>
+    <li><a href="essay/base_code_javascript1.html"target="_blank" >nginx（待补充）</a></li>
+    <li><a href="essay/base_code_javascript1.html"target="_blank" >tomcat（待补充）</a></li>
+    <li><a href="essay/base_code_javascript1.html"target="_blank" >zibbix（待补充）</a></li>
+    <li><a href="essay/base_code_javascript1.html"target="_blank" >Gitlab（待补充）</a></li>
+    <li><a href="essay/base_code_javascript1.html"target="_blank" >Jenkins（待补充）</a></li>
+    <li><a href="essay/base_code_javascript1.html"target="_blank" >Ansible（待补充）</a></li>
+    <li><a href="essay/base_code_javascript1.html"target="_blank" >Grafana（待补充）</a></li>
     </ul>  
 </body>
 </html>
