--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@ var _hmt = _hmt || [];
     <li><a href="essay/base_code_java1.html"target="_blank" >网络协议理论（待补充）</a></li>
     <li><a href="essay/base_code_golang1.html"target="_blank" >UDP（待补充）</a></li>
     <li><a href="essay/base_code_python1.html"target="_blank" >TCP（待补充）</a></li>
-    <li><a href="essay/base_code_javascript1.html"target="_blank" >其他（待补充）</a></li>
+    <li><a href="essay/base_code_javascript1.html"target="_blank" >coap（待补充）</a></li>
+    <li><a href="essay/base_code_javascript1.html"target="_blank" >mqtt（待补充）</a></li>
  </ul>   
     
     <h3>大数据</h3>
