--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@ var _hmt = _hmt || [];
       <h3>数据库</h3>
   <ul> 
     <li><a href="essay/database/database.html"target="_blank" >数据库理论</a></li>
-    <li><a href="essay/database/database-mysql.htm"target="_blank" >数据库分析-mysql</a></li>
-    <li><a href="essay/base_code_golang1.html"target="_blank" >mysql（待补充）</a></li>
+    <li><a href="essay/database/database-mysql.htm"target="_blank" >mysql</a></li>
     <li><a href="essay/base_code_python1.html"target="_blank" >sqlsever（待补充）</a></li>
     <li><a href="essay/base_code_javascript1.html"target="_blank" >oracle（待补充）</a></li>
     </ul>  
