--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@ var _hmt = _hmt || [];
     
      <h3>编程语言</h3>
   <ul> 
-    <li><a href="essay/base_code/langue.html"target="_blank" >编程语言</a></li>
-    <li><a href="essay/base_code/java.htm"target="_blank" >java</a></li>
-    <li><a href="essay/base_code/golang.htm"target="_blank" >golang</a></li>
+    <li><a href="essay/language/langue.html"target="_blank" >编程语言</a></li>
+    <li><a href="essay/language/java.htm"target="_blank" >java</a></li>
+    <li><a href="essay/language/golang.htm"target="_blank" >golang</a></li>
     <li><a href="essay/base_code_python.html"target="_blank" >python（待补充）</a></li>
     <li><a href="essay/base_code_javascript.html"target="_blank" >javascript（待补充）</a></li>
     </ul>  
