--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@ var _hmt = _hmt || [];
     <li><a href="essay/base_code_python1.html"target="_blank" >查找（待补充）</a></li>
     <li><a href="essay/base_code_javascript1.html"target="_blank" >算法基础（待补充）</a></li>
     </ul>  
+	
        <h3>网络协议</h3>
   <ul> 
     <li><a href="essay/base_code_java1.html"target="_blank" >网络协议理论（待补充）</a></li>
@@ -81,15 +82,23 @@ var _hmt = _hmt || [];
     <li><a href="essay/base_code_javascript1.html"target="_blank" >实时计算（待补充）</a></li>
     <li><a href="essay/bigdata/flink.htm"target="_blank" >flink</a></li>
     </ul>  
-    
-        <h3>J2EE</h3>
+	
+<!-- J2EE begin----------------------------------------------------------------------- -->
+ <h3>J2EE</h3>
   <ul> 
-    <li><a href="essay/j2ee/spring.htm"target="_blank" >spring</a></li>
-    <li><a href="essay/j2ee/struts.htm"target="_blank" >struts</a></li>
-    <li><a href="essay/j2ee/mybatis.htm"target="_blank" >mybatis</a></li>
-    <li><a href="essay/base_code_javascript1.html"target="_blank" >spring cloud 系列</a></li>
-    <li><a href="essay/base_code_javascript1.html"target="_blank" >dubbo（待补充）</a></li>
+           <li><a href="essay/j2ee/spring.htm"target="_blank" >spring</a></li>
+           <li><a href="essay/j2ee/struts.htm"target="_blank" >struts</a></li>
+           <li><a href="essay/j2ee/mybatis.htm"target="_blank" >mybatis</a></li>
+           <li><a href="essay/j2ee/gateway.htm"target="_blank" >spring cloud gateway</a></li>
+	   <li><a href="essay/j2ee/nacos.htm"target="_blank" >spring cloud nacos</a></li>
+	   <li><a href="essay/j2ee/seata.htm"target="_blank" >spring cloud seata</a></li>
+	   <li><a href="essay/j2ee/stream.htm"target="_blank" >spring cloud stream</a></li>
+	   <li><a href="essay/j2ee/bus.htm"target="_blank" >spring cloud bus</a></li>
+	   <li><a href="essay/j2ee/bus.htm"target="_blank" >spring cloud Sentinel</a></li>
+	   <li><a href="essay/j2ee/dubbo.htm"target="_blank" >dubbo</a></li>
     </ul>  
+<!-- J2EE end----------------------------------------------------------------------- -->
+	
 <h3>容器</h3>
   <ul> 
     <li><a href="essay/base_code_golang1.html"target="_blank" >linux（待补充）</a></li>
