--- a/index.html
+++ b/index.html
@@ -74,21 +74,28 @@ var _hmt = _hmt || [];
     <li><a href="essay/base_code_javascript1.html"target="_blank" >mqtt（待补充）</a></li>
  </ul>   
     
+<!-- 大数据 begin----------------------------------------------------------------------- -->
     <h3>大数据</h3>
   <ul> 
     <li><a href="essay/bigdata/bigdata.html"target="_blank" >大数据理论</a></li>
     <li><a href="essay/base_code_golang1.html"target="_blank" >hdfs（待补充）</a></li>
     <li><a href="essay/base_code_python1.html"target="_blank" >分布式计算（待补充）</a></li>
     <li><a href="essay/base_code_javascript1.html"target="_blank" >实时计算（待补充）</a></li>
-    <li><a href="essay/bigdata/flink.htm"target="_blank" >flink</a></li>
+    <li><a href="essay/bigdata/flink.htm"target="_blank" >Apache flink</a></li>
+    <li><a href="essay/bigdata/clickhouse.htm"target="_blank" >clickhouse（待补充）</a></li>
+    <li><a href="essay/bigdata/doris.htm"target="_blank" >Apache doris（待补充）</a></li>
+    <li><a href="essay/bigdata/atlas.htm"target="_blank" >Apache atlas（待补充）</a></li>
+    <li><a href="essay/bigdata/ranger.htm"target="_blank" >Apache ranger（待补充）</a></li>
+    <li><a href="essay/bigdata/sentry.htm"target="_blank" >Apache Sentry（待补充）</a></li>
+    <li><a href="essay/bigdata/griffin.htm"target="_blank" >Apache Griffin（待补充）</a></li>
     </ul>  
-	
+<!-- 大数据 end----------------------------------------------------------------------- -->
 <!-- J2EE begin----------------------------------------------------------------------- -->
  <h3>J2EE</h3>
   <ul> 
-           <li><a href="essay/j2ee/spring.htm"target="_blank" >spring</a></li>
-           <li><a href="essay/j2ee/struts.htm"target="_blank" >struts</a></li>
-           <li><a href="essay/j2ee/mybatis.htm"target="_blank" >mybatis</a></li>
+           <li><a href="essay/j2ee/spring.htm"target="_blank" >ssm - spring</a></li>
+           <li><a href="essay/j2ee/struts.htm"target="_blank" >ssm - struts</a></li>
+           <li><a href="essay/j2ee/mybatis.htm"target="_blank" >ssm - mybatis</a></li>
            <li><a href="essay/j2ee/gateway.htm"target="_blank" >spring cloud gateway</a></li>
 	   <li><a href="essay/j2ee/nacos.htm"target="_blank" >spring cloud nacos</a></li>
 	   <li><a href="essay/j2ee/seata.htm"target="_blank" >spring cloud seata</a></li>
@@ -97,6 +104,7 @@ var _hmt = _hmt || [];
 	   <li><a href="essay/j2ee/bus.htm"target="_blank" >spring cloud Sentinel</a></li>
 	   <li><a href="essay/j2ee/dubbo.htm"target="_blank" >dubbo</a></li>
     </ul>  
+
 <!-- J2EE end----------------------------------------------------------------------- -->
 	
 <h3>容器</h3>
