--- a/index.html
+++ b/index.html
@@ -78,9 +78,14 @@ var _hmt = _hmt || [];
     <h3>大数据</h3>
   <ul> 
     <li><a href="essay/bigdata/bigdata.html"target="_blank" >大数据理论</a></li>
-    <li><a href="essay/base_code_golang1.html"target="_blank" >hdfs（待补充）</a></li>
-    <li><a href="essay/base_code_python1.html"target="_blank" >分布式计算（待补充）</a></li>
-    <li><a href="essay/base_code_javascript1.html"target="_blank" >实时计算（待补充）</a></li>
+    <li><a href="essay/bigdata/dw.htm"target="_blank" >分布式计算理论（待补充）</a></li>
+    <li><a href="essay/bigdata/dw.htm"target="_blank" >实时计算理论（待补充）</a></li>
+    <li><a href="essay/bigdata/dw.htm"target="_blank" >数据仓库理论（待补充）</a></li>
+    <li><a href="essay/bigdata/hadoop.htm"target="_blank" >Apache hadoop（待补充）</a></li>
+    <li><a href="essay/bigdata/habase.htm"target="_blank" >Apache habase（待补充）</a></li>
+    <li><a href="essay/bigdata/zookeeper.htm"target="_blank" >Apache zookeeper（待补充）</a></li>
+    <li><a href="essay/bigdata/hive.htm"target="_blank" >Apache hive（待补充）</a></li>
+    <li><a href="essay/bigdata/yarn.htm"target="_blank" >Apache yarn（待补充）</a></li>
     <li><a href="essay/bigdata/flink.htm"target="_blank" >Apache flink</a></li>
     <li><a href="essay/bigdata/clickhouse.htm"target="_blank" >clickhouse（待补充）</a></li>
     <li><a href="essay/bigdata/doris.htm"target="_blank" >Apache doris（待补充）</a></li>
@@ -90,6 +95,8 @@ var _hmt = _hmt || [];
     <li><a href="essay/bigdata/griffin.htm"target="_blank" >Apache Griffin（待补充）</a></li>
     </ul>  
 <!-- 大数据 end----------------------------------------------------------------------- -->
+	
+	
 <!-- J2EE begin----------------------------------------------------------------------- -->
  <h3>J2EE</h3>
   <ul> 
