--- a/index.html
+++ b/index.html
@@ -49,14 +49,26 @@ var _hmt = _hmt || [];
     <li><a href="essay/base_code_python1.html"target="_blank" >sqlsever（待补充）</a></li>
     <li><a href="essay/base_code_javascript1.html"target="_blank" >oracle（待补充）</a></li>
     </ul>  
+	
+   <!-- 中间件 begin----------------------------------------------------------------------- -->
        <h3>中间件</h3>
   <ul> 
-    <li><a href="essay/base_code_java1.html"target="_blank" >消息队列（待补充）</a></li>
-    <li><a href="essay/base_code_golang1.html"target="_blank" >分布式缓存（待补充）</a></li>
-    <li><a href="essay/base_code_python1.html"target="_blank" >负载均衡（待补充）</a></li>
-    <li><a href="essay/base_code_javascript1.html"target="_blank" >协调器（待补充）</a></li>
+    <li><a href="essay/middleware/mq.htm"target="_blank" >消息队列理论（待补充）</a></li>
+    <li><a href="essay/middleware/cache.htm"target="_blank" >分布式缓存理论（待补充）</a></li>
+    <li><a href="essay/middleware/LB.htm"target="_blank" >负载均衡理论（待补充）</a></li>
+    <li><a href="essay/middleware/kafka.htm"target="_blank" >Apache kafka（待补充）</a></li>
+    <li><a href="essay/middleware/rabbitmq.htm"target="_blank" >rabbitmq（待补充）</a></li>
+    <li><a href="essay/middleware/redis.htm"target="_blank" >redis（待补充）</a></li>
+    <li><a href="essay/middleware/mencahed.htm"target="_blank" >mencahed（待补充）</a></li>
+    <li><a href="essay/middleware/pulsar.htm"target="_blank" >Apache Pulsar（待补充）</a></li>
+    <li><a href="essay/middleware/RabbitMQ.htm"target="_blank" >RabbitMQ（待补充）</a></li>
+    <li><a href="essay/middleware/lvs.htm"target="_blank" >LVS（待补充）</a></li>
+    <li><a href="essay/middleware/keepalived.htm"target="_blank" >keepalived（待补充）</a></li>
+    <li><a href="essay/middleware/haproxy.htm"target="_blank" >haproxy（待补充）</a></li>
     </ul>  
-    
+    <!-- 中间件 end----------------------------------------------------------------------- -->
+	
+	
       <h3>算法</h3>
   <ul> 
     <li><a href="essay/base_code_java1.html"target="_blank" >数据结构（待补充）</a></li>
