--- a/index.html
+++ b/index.html
@@ -41,14 +41,19 @@ var _hmt = _hmt || [];
     
     <li><a href="essay/base_code_javascript1.html"target="_blank" >架构设计（待补充）</a></li>
     </ul>  
-	
-      <h3>数据库</h3>
+
+<!-- 数据库 begin----------------------------------------------------------------------- -->
+  <h3>数据库</h3>
   <ul> 
     <li><a href="essay/database/database.html"target="_blank" >数据库理论</a></li>
     <li><a href="essay/database/database-mysql.htm"target="_blank" >mysql</a></li>
     <li><a href="essay/base_code_python1.html"target="_blank" >sqlsever（待补充）</a></li>
     <li><a href="essay/base_code_javascript1.html"target="_blank" >oracle（待补充）</a></li>
+    <li><a href="essay/database/nosql.htm"target="_blank" >nosql理论（待补充）</a></li>
+    <li><a href="essay/database/mongodb.htm"target="_blank" >mongodb（待补充）</a></li>
     </ul>  
+ <!-- 数据库 begin----------------------------------------------------------------------- -->
+	
 	
    <!-- 中间件 begin----------------------------------------------------------------------- -->
        <h3>中间件</h3>
@@ -125,6 +130,23 @@ var _hmt = _hmt || [];
     </ul>  
 
 <!-- J2EE end----------------------------------------------------------------------- -->
+
+<!-- 文件存储 begin----------------------------------------------------------------------- -->
+  <h3>文件系统</h3>
+  <ul> 
+    <li><a href="essay/fs/fs.html" target="_blank" >文件存储理论（待补充）</a></li>
+    <li><a href="essay/fs/lucene.htm" target="_blank" >lucene（待补充）</a></li>
+    <li><a href="essay/fs/elasticsearch .htm" target="_blank" >Elasticsearch （待补充）</a></li>
+    <li><a href="essay/fs/mongofs.htm" target="_blank" >mongofs  （待补充）</a></li>
+    <li><a href="essay/fs/FastDFS.htm" target="_blank" >FastDFS  （待补充）</a></li>
+    <li><a href="essay/fs/HDFS.htm" target="_blank" >HDFS  （待补充）</a></li>
+    <li><a href="essay/fs/TFS.htm" target="_blank" >TFS  （待补充）</a></li>
+    <li><a href="essay/fs/MogileFS.htm" target="_blank" >MogileFS  （待补充）</a></li>
+    <li><a href="essay/fs/MooseFS.htm" target="_blank" >MooseFS  （待补充）</a></li>
+    <li><a href="essay/fs/GlusterFS.htm" target="_blank" >GlusterFS  （待补充）</a></li>
+    <li><a href="essay/fs/Ceph.htm" target="_blank" >Ceph  （待补充）</a></li>
+   </ul>  
+ <!-- 文件存储 end----------------------------------------------------------------------- -->
 	
 <h3>容器</h3>
   <ul> 
