--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@ var _hmt = _hmt || [];
     <li><a href="essay/think/think.html"target="_blank" >编程思想</a></li>
     <li><a href="essay/base_code_java.html"target="_blank" >分布式（待补充）</a></li>
     <li><a href="essay/base_code_golang1.html"target="_blank" >设计模式（待补充）</a></li>
-    
     <li><a href="essay/base_code_javascript1.html"target="_blank" >架构设计（待补充）</a></li>
     </ul>  
 
@@ -46,13 +45,18 @@ var _hmt = _hmt || [];
   <h3>数据库</h3>
   <ul> 
     <li><a href="essay/database/database.html"target="_blank" >数据库理论</a></li>
+    <li><a href="essay/database/database.html"target="_blank" >数据库扩容理论</a></li>
     <li><a href="essay/database/database-mysql.htm"target="_blank" >mysql</a></li>
     <li><a href="essay/base_code_python1.html"target="_blank" >sqlsever（待补充）</a></li>
     <li><a href="essay/base_code_javascript1.html"target="_blank" >oracle（待补充）</a></li>
     <li><a href="essay/database/nosql.htm"target="_blank" >nosql理论（待补充）</a></li>
     <li><a href="essay/database/mongodb.htm"target="_blank" >mongodb（待补充）</a></li>
+    <li><a href="essay/database/shardingjdbc.htm"target="_blank" >shardingjdbc（待补充）</a></li>
+    <li><a href="essay/database/mycat.htm"target="_blank" >mycat（待补充）</a></li>
+    <li><a href="essay/database/mysqlproxy.htm"target="_blank" >mysqlproxy（待补充）</a></li>
+    <li><a href="essay/database/mysqlcluster.htm"target="_blank" >MySQL Cluster（待补充）</a></li>
     </ul>  
- <!-- 数据库 begin----------------------------------------------------------------------- -->
+ <!-- 数据库 end----------------------------------------------------------------------- -->
 	
 	
    <!-- 中间件 begin----------------------------------------------------------------------- -->
