--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@ var _hmt = _hmt || [];
     <li><a href="essay/database/mycat.htm"target="_blank" >mycat（待补充）</a></li>
     <li><a href="essay/database/mysqlproxy.htm"target="_blank" >mysqlproxy（待补充）</a></li>
     <li><a href="essay/database/mysqlcluster.htm"target="_blank" >MySQL Cluster（待补充）</a></li>
+    <li><a href="essay/database/datax-web.htm"target="_blank" >datax-web（待补充）</a></li>
+    <li><a href="essay/database/canal.htm"target="_blank" >canal（待补充）</a></li>
+    <li><a href="essay/database/otter.htm"target="_blank" >otter（待补充）</a></li>
+    <li><a href="essay/database/maxwell.htm"target="_blank" >maxwell（待补充）</a></li>
     </ul>  
  <!-- 数据库 end----------------------------------------------------------------------- -->
 	
@@ -124,6 +128,8 @@ var _hmt = _hmt || [];
            <li><a href="essay/j2ee/spring.htm"target="_blank" >ssm - spring</a></li>
            <li><a href="essay/j2ee/struts.htm"target="_blank" >ssm - struts</a></li>
            <li><a href="essay/j2ee/mybatis.htm"target="_blank" >ssm - mybatis</a></li>
+	   <li><a href="essay/j2ee/xxl-job.htm"target="_blank" >xxl-job</a></li>
+	   <li><a href="essay/j2ee/xxl-job.htm"target="_blank" >xxl-job</a></li>
            <li><a href="essay/j2ee/gateway.htm"target="_blank" >spring cloud gateway</a></li>
 	   <li><a href="essay/j2ee/nacos.htm"target="_blank" >spring cloud nacos</a></li>
 	   <li><a href="essay/j2ee/seata.htm"target="_blank" >spring cloud seata</a></li>
