--- a/index.html
+++ b/index.html
@@ -180,6 +180,7 @@ var _hmt = _hmt || [];
     <li><a href="essay/base_code_javascript1.html"target="_blank" >Jenkins（待补充）</a></li>
     <li><a href="essay/base_code_javascript1.html"target="_blank" >Ansible（待补充）</a></li>
     <li><a href="essay/base_code_javascript1.html"target="_blank" >Grafana（待补充）</a></li>
+    <li><a href="essay/base_code_javascript1.html"target="_blank" >ELK/FLIK（待补充）</a></li>
     </ul>  
 </body>
 </html>
