--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ var _hmt = _hmt || [];
            <li><a href="essay/j2ee/spring.htm"target="_blank" >ssm - spring</a></li>
            <li><a href="essay/j2ee/struts.htm"target="_blank" >ssm - struts</a></li>
            <li><a href="essay/j2ee/mybatis.htm"target="_blank" >ssm - mybatis</a></li>
-	   <li><a href="essay/j2ee/xxl-job.htm"target="_blank" >xxl-job</a></li>
+	   <li><a href="essay/j2ee/xxl-job.htm"target="_blank" >xxl-job（待补充）</a></li>
            <li><a href="essay/j2ee/gateway.htm"target="_blank" >spring cloud gateway</a></li>
 	   <li><a href="essay/j2ee/nacos.htm"target="_blank" >spring cloud nacos</a></li>
 	   <li><a href="essay/j2ee/seata.htm"target="_blank" >spring cloud seata</a></li>
