--- a/index.html
+++ b/index.html
@@ -125,9 +125,9 @@ var _hmt = _hmt || [];
 <!-- J2EE begin----------------------------------------------------------------------- -->
  <h3>J2EE</h3>
   <ul> 
-           <li><a href="essay/j2ee/spring.htm"target="_blank" >ssm - spring</a></li>
-           <li><a href="essay/j2ee/struts.htm"target="_blank" >ssm - struts</a></li>
-           <li><a href="essay/j2ee/mybatis.htm"target="_blank" >ssm - mybatis</a></li>
+           <li><a href="essay/j2ee/spring.htm"target="_blank" >spring</a></li>
+           <li><a href="essay/j2ee/struts.htm"target="_blank" >struts</a></li>
+           <li><a href="essay/j2ee/mybatis.htm"target="_blank" >mybatis</a></li>
 	   <li><a href="essay/j2ee/xxl-job.htm"target="_blank" >xxl-job（待补充）</a></li>
            <li><a href="essay/j2ee/gateway.htm"target="_blank" >spring cloud gateway</a></li>
 	   <li><a href="essay/j2ee/nacos.htm"target="_blank" >spring cloud nacos</a></li>
