--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ var _hmt = _hmt || [];
            <li><a href="essay/j2ee/struts.htm"target="_blank" >struts</a></li>
            <li><a href="essay/j2ee/mybatis.htm"target="_blank" >mybatis</a></li>
 	   <li><a href="essay/j2ee/xxl-job.htm"target="_blank" >xxl-job（待补充）</a></li>
-           <li><a href="essay/j2ee/gateway.htm"target="_blank" >spring cloud gateway</a></li>
+           <li><a href="essay/j2ee/Spring Cloud Gateway.htm"target="_blank" >spring cloud gateway</a></li>
 	   <li><a href="essay/j2ee/nacos.htm"target="_blank" >spring cloud nacos</a></li>
 	   <li><a href="essay/j2ee/seata.htm"target="_blank" >spring cloud seata</a></li>
 	   <li><a href="essay/j2ee/stream.htm"target="_blank" >spring cloud stream</a></li>
