--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@ var _hmt = _hmt || [];
     <h3> 陈东方</h3>
 	<ul> 
        <li><a href="essay/aboutMe.html"target="_blank" >关于本人</a></li>
-    </ul>                
+    </ul>    
+	
+    <ul> 
+    <li><a href="essay/netty.htm"target="_blank" >netty</a></li>
+    </ul> 
     
      <h3>编程语言</h3>
   <ul> 
