--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@ var _hmt = _hmt || [];
     list-style: none;
     }
     </style>
-    <h3> 陈东方</h3>
+    <h3> Chen Dongfang</h3>
 	<ul> 
-       <li><a href="essay/aboutMe.html"target="_blank" >关于本人</a></li>
+       <li><a href="essay/aboutMe.html"target="_blank" >about</a></li>
     </ul>    
 	
     <ul> 
