--- a/essay/aboutMe.html
+++ b/essay/aboutMe.html
@@ -6,7 +6,7 @@
 <body>
 陈东方:
     <br/><br/>
-2017毕业于华东理工大学；2009年开始从事互联网相关工作，十多年互联网IT行业工作经验。擅长领域：系统架构，大数据，IM架构。
+十多年互联网IT行业工作经验。擅长领域：系统架构，大数据，IM架构。
     <br/><br/>
 联系人：陈东方 <br/>
 微信：ichendongfang <br/>
