--- a/index.html
+++ b/index.html
@@ -23,12 +23,14 @@ var _hmt = _hmt || [];
     <h3> Chen Dongfang</h3>
 	<ul> 
        <li><a href="essay/aboutMe.html"target="_blank" >about</a></li>
-    </ul>    
-	
+    </ul>    	
+<!-- 源码分析 begin----------------------------------------------------------------------- -->
     <ul> 
-    <li><a href="essay/netty.htm"target="_blank" >netty</a></li>
+      <li><a href="essay/netty.htm"target="_blank" >netty</a></li>
+      <li><a href="essay/gateway.htm"target="_blank" >gateway</a></li>
     </ul> 
-    
+<!-- 源码分析 end----------------------------------------------------------------------- -->
+	
      <h3>编程语言</h3>
   <ul> 
     <li><a href="essay/language/language.htm"target="_blank" >编程语言</a></li>
