--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@ var _hmt = _hmt || [];
     <ul> 
       <li><a href="essay/netty.htm"target="_blank" >netty</a></li>
       <li><a href="essay/gateway.htm"target="_blank" >gateway</a></li>
+      <li><a href="essay/seata.htm"target="_blank" >seata</a></li>
     </ul> 
 <!-- 源码分析 end----------------------------------------------------------------------- -->
 	
@@ -136,7 +137,6 @@ var _hmt = _hmt || [];
            <li><a href="essay/j2ee/mybatis.htm"target="_blank" >mybatis</a></li>
 	   <li><a href="essay/j2ee/xxl-job.htm"target="_blank" >xxl-job（待补充）</a></li>
 	   <li><a href="essay/j2ee/nacos.htm"target="_blank" >spring cloud nacos</a></li>
-	   <li><a href="essay/j2ee/seata.htm"target="_blank" >spring cloud seata</a></li>
 	   <li><a href="essay/j2ee/stream.htm"target="_blank" >spring cloud stream</a></li>
 	   <li><a href="essay/j2ee/bus.htm"target="_blank" >spring cloud bus</a></li>
 	   <li><a href="essay/j2ee/bus.htm"target="_blank" >spring cloud Sentinel</a></li>
