--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@ var _hmt = _hmt || [];
       <li><a href="essay/netty.htm"target="_blank" >netty</a></li>
       <li><a href="essay/gateway.htm"target="_blank" >gateway</a></li>
       <li><a href="essay/seata.htm"target="_blank" >seata</a></li>
+      <li><a href="essay/mybatis.htm"target="_blank" >mybatis</a></li>
     </ul> 
 <!-- 源码分析 end----------------------------------------------------------------------- -->
 	
@@ -134,7 +135,6 @@ var _hmt = _hmt || [];
   <ul> 
            <li><a href="essay/j2ee/spring.htm"target="_blank" >spring</a></li>
            <li><a href="essay/j2ee/struts.htm"target="_blank" >struts</a></li>
-           <li><a href="essay/j2ee/mybatis.htm"target="_blank" >mybatis</a></li>
 	   <li><a href="essay/j2ee/xxl-job.htm"target="_blank" >xxl-job（待补充）</a></li>
 	   <li><a href="essay/j2ee/nacos.htm"target="_blank" >spring cloud nacos</a></li>
 	   <li><a href="essay/j2ee/stream.htm"target="_blank" >spring cloud stream</a></li>
