--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@ var _hmt = _hmt || [];
       <li><a href="essay/gateway.htm"target="_blank" >gateway</a></li>
       <li><a href="essay/seata.htm"target="_blank" >seata</a></li>
       <li><a href="essay/mybatis.htm"target="_blank" >mybatis</a></li>
+      <li><a href="essay/mybatis.htm"target="_blank" >algorithm</a></li>	    
     </ul> 
 <!-- 源码分析 end----------------------------------------------------------------------- -->
 	
