--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ var _hmt = _hmt || [];
     </style>
     <h3> Chen Dongfang</h3>
 	<ul> 
-       <li><a href="essay/about.htm"target="_blank" >about me</a></li>
+       <li><a href="essay/about.htm"target="_blank" >about</a></li>
     </ul>    	
 <!-- 源码分析 begin----------------------------------------------------------------------- -->
     <ul> 
