--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@ var _hmt = _hmt || [];
     }
     </style>
     <h3> Chen Dongfang</h3>
-	<ul> 
-       <li><a href="essay/about.htm"target="_blank" >about</a></li>
-    </ul>    	
+ 	
 <!-- 源码分析 begin----------------------------------------------------------------------- -->
     <ul> 
+       <li><a href="essay/about.htm"target="_blank" >about</a></li>    
       <li><a href="essay/netty.htm"target="_blank" >netty</a></li>
       <li><a href="essay/gateway.htm"target="_blank" >gateway</a></li>
       <li><a href="essay/seata.htm"target="_blank" >seata</a></li>
       <li><a href="essay/mybatis.htm"target="_blank" >mybatis</a></li>
-      <li><a href="essay/algorithm.htm"target="_blank" >algorithm</a></li>	    
+      <li><a href="essay/algorithm.htm"target="_blank" >algorithm</a></li>	
+      <li><a href="essay/java.htm"target="_blank" >java</a></li>	
     </ul> 
 <!-- 源码分析 end----------------------------------------------------------------------- -->
 	
