--- a/index.html
+++ b/index.html
@@ -1,39 +1,69 @@
-<html>
-<script>
-var _hmt = _hmt || [];
-(function() {
-  var hm = document.createElement("script");
-  hm.src = "https://hm.baidu.com/hm.js?d3dbed49f5a68d510aa15571dc1d26ca";
-  var s = document.getElementsByTagName("script")[0]; 
-  s.parentNode.insertBefore(hm, s);
-})();
-</script>
 
+<!DOCTYPE html>
+<html>
 <head>
-    <meta http-equiv="content-type" content="text/html;charset=utf-8"/>
-    <title>陈东方</title>
-    <link id="favicon" href="http://www.chendongfang.cn/img/favicon.jpg" rel="icon"/>
+	<meta charset="utf-8"> 
+	<title>CHEN DONGFANG</title>
+	<link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
+	<script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
+	<script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
-    <style>
-    li{
-    list-style: none;
-    }
-    </style>
-    <h3> Chen Dongfang</h3>
- 	
-<!-- 源码分析 begin----------------------------------------------------------------------- -->
-    <ul> 
-       <li><a href="essay/about.htm"target="_blank" >about</a></li>    
-      <li><a href="essay/netty.htm"target="_blank" >netty</a></li>
-      <li><a href="essay/gateway.htm"target="_blank" >gateway</a></li>
-      <li><a href="essay/seata.htm"target="_blank" >seata</a></li>
-      <li><a href="essay/mybatis.htm"target="_blank" >mybatis</a></li>
-      <li><a href="essay/algorithm.htm"target="_blank" >algorithm</a></li>	
-      <li><a href="essay/java.htm"target="_blank" >java</a></li>	
-    </ul> 
-<!-- 源码分析 end----------------------------------------------------------------------- -->
-	
-   
+<div class="container">
+	<div class="row clearfix">
+		<div class="col-md-12 column">
+			<h3 class="text-center">
+				CHEN DONGFANG
+			</h3>
+			
+			<dl class="dl-horizontal">
+				<dt>
+					Career
+				</dt>
+				<dd>
+					software engineer
+				</dd>
+				<dt>
+					Research field
+				</dt>
+				<dd>
+					System architecture, Big data, IM architecture.
+				</dd>
+				<dt>
+					Blog
+				</dt>
+				<dd>
+					www.chendongfang.com
+				</dd>
+				<dt>
+					E-mail
+				</dt>
+				<dd>
+					chendongfang_2006@126.com
+				</dd>
+			</dl>
+			<ol>
+				<li>
+					netty
+				</li>
+				<li>
+					gateway
+				</li>
+				<li>
+					seata
+				</li>
+				<li>
+					mybatis
+				</li>
+				<li>
+					algorithm
+				</li>
+				<li>
+					java
+				</li>
+			</ol>
+		</div>
+	</div>
+</div>
 </body>
 </html>
