--- a/index.html
+++ b/index.html
@@ -43,24 +43,12 @@
 				</dd>
 			</dl>
 			<ol>
-				<li>
-					netty
-				</li>
-				<li>
-					gateway
-				</li>
-				<li>
-					seata
-				</li>
-				<li>
-					mybatis
-				</li>
-				<li>
-					algorithm
-				</li>
-				<li>
-					java
-				</li>
+				      <li><a href="essay/netty.htm"target="_blank" >netty</a></li>
+				      <li><a href="essay/gateway.htm"target="_blank" >gateway</a></li>
+				      <li><a href="essay/seata.htm"target="_blank" >seata</a></li>
+				      <li><a href="essay/mybatis.htm"target="_blank" >mybatis</a></li>
+				      <li><a href="essay/algorithm.htm"target="_blank" >algorithm</a></li>	
+				      <li><a href="essay/java.htm"target="_blank" >java</a></li>	
 			</ol>
 		</div>
 	</div>
