--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 					chendongfang_2006@126.com
 				</dd>
 			</dl>
-			<ol>          <li><a href="essay/redis.htm"target="_blank" >netty</a></li>
+			<ol>          <li><a href="essay/redis.htm"target="_blank" >redis</a></li>
 				      <li><a href="essay/netty.htm"target="_blank" >netty</a></li>
 				      <li><a href="essay/gateway.htm"target="_blank" >gateway</a></li>
 				      <li><a href="essay/seata.htm"target="_blank" >seata</a></li>
